--- a/app/config.yaml.sample
+++ b/app/config.yaml.sample
@@ -12,7 +12,7 @@ accounts:
 regions: ['eu-west-1','us-east-1']
 
 aws: 
-    compute: ['ec2', 'ebs','elb', 'autoscale']
+    compute: ['ec2', 'ebs', 'snapshots', elb', 'autoscale']
     database: ['rds','dynamodb', 'elasticache']
     deployments: ['cloudformation']
     services: ['route53', 'sqs', 'sns']
