--- a/app/config.yaml.sample
+++ b/app/config.yaml.sample
@@ -14,7 +14,7 @@ regions: ['eu-west-1','us-east-1']
 aws: 
     compute: ['ec2', 'ebs', 'snapshots', elb', 'autoscale']
     database: ['rds','dynamodb', 'elasticache', 'redshift']
-    deployments: ['cloudformation']
+    deployments: ['cloudformation', 'sgaudit']
     services: ['route53', 'sqs', 'sns']
 
 
