Add whitelist for IPs

--- a/app/config.yaml.sample
+++ b/app/config.yaml.sample
@@ -32,3 +32,9 @@ sgaudit:
     known_ips: ['1.1.1.1/0']
     excluded_groups: ['ignore_this_group']
     excluded_ips: ['0.0.0.0/0']
+
+
+admin:
+    username: 'admin'
+    password: 'XXXXXXX'
+
