--- a/app/config.yaml.sample
+++ b/app/config.yaml.sample
@@ -36,5 +36,8 @@ sgaudit:
 
 admin:
     username: 'admin'
-    password: 'XXXXXXX'
+    password: 'XXXXXXXXXXX'
+    enable_email: False
+    email_to: 'test@test.com'
+    email_from: 'elastatus@test.com'
 
